--- a/PW/math-kidz/package.json
+++ b/PW/math-kidz/package.json
@@ -12,5 +12,10 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.29.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.13",
+    "@types/react": "^17.0.0",
+    "typescript": "^4.1.3"
   }
 }
