--- a/PW/math-kidz/package.json
+++ b/PW/math-kidz/package.json
@@ -11,7 +11,9 @@
     "next": "^10.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "sass": "^1.29.0"
+    "sass": "^1.29.0",
+    "sqlite": "^4.0.18",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.13",
