--- a/PW/math-kidz/package.json
+++ b/PW/math-kidz/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node database-test.js && next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
     "next": "^10.0.0",
     "react": "16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "16.13.1",
     "sass": "^1.29.0",
     "sqlite": "^4.0.18",
