--- a/PW/math-kidz/package.json
+++ b/PW/math-kidz/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "disqus-react": "^1.0.10",
     "next": "^10.0.0",
     "react": "16.13.1",
     "react-bootstrap": "^1.4.0",
